Trying to add java logo 4

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/java-logo.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="alternate icon" href="/java-logo.svg" />
+    <link rel="mask-icon" href="/java-logo.svg" color="#E76F00" />
+    <link rel="apple-touch-icon" href="/java-logo.svg" />
+    <meta name="theme-color" content="#E76F00" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aplicación Educativa de Java</title>
   </head>
